[SITIONIX-14] add wire mock loader